# Projet801

./: .gitignore  CMakeLists.txt  README.md
apps/: benchmark.cpp  cli_common.hpp  json_writer.hpp  wfc_dungeon.cpp  wfc_kokkos.cpp  wfc_omp.cpp  wfc_serial.cpp
docs/: ALGORITHM.md  ARCHITECTURE.md  BUILD.md  CHOICES.md  PERFORMANCE.md  TESTING.md  benchmark.md  expert_analysis.md  report.md  results.md  romeo_diagnostic.md  romeo_full_diag.md  romeo_report.md  romeo_smoke_diag.md  slides.md  ue5_integration.md
docs/coverage/: index.Bitset.hpp.86ec03cb922ceb884ba6652f26b20e6d.html  index.Grid.hpp.375cab6c2effba6b901fd03ea403a43d.html  index.GridIO.cpp.a01f8d12e41ab2f80f0d6443b14d3d21.html  index.OverlapRules.cpp.b224af082efacb3038b3843084d17697.html  index.OverlapRules.hpp.c17d65c11c4eb2659641c520bba56a16.html  index.SolverCommon.cpp.d0b519b1303898e88886209f465e19c4.html  index.SolverCommon.hpp.6b191b6a9e53e4f2723dc6f0b65e10db.html  index.Tile.hpp.19ca8ac8581c39d1c8071e2277677aec.html  index.TileSet.cpp.bc56ee5c5ce6873318867f512cfada39.html  index.TileSet.hpp.3823da82fda8e73adb6509a72f76bb87.html  index.WFCSolver.hpp.275772b62e9a320c0a967bf274aea576.html  index.WFCSolverBase.cpp.488e991243775da73853c0cb993f00fe.html  index.WFCSolverBase.hpp.0e133731dc65f21dc7f9ddbf163033b1.html  index.WFCSolverKokkos.cpp.380b33c107e8a08505099381e290e89c.html  index.WFCSolverKokkos.hpp.8dfeee6d0346d424a4906002ddba3c02.html  index.WFCSolverOMP.cpp.1e47ede03f9e9891991ba440296704ee.html  index.WFCSolverOMP.hpp.f11cb1d46b04ea09db3245df86b9d34f.html  index.WFCSolverSerial.cpp.e5a0cf20a57c6141e6b6a560d4f8e21c.html  index.WFCSolverSerial.hpp.aa26be7953484280333de9160f8e9c11.html  index.Wave.hpp.7888c0c92c96eb5cd8d22c4d13c017c4.html  index.functions.html  index.html
include/wfc/: Bitset.hpp  Grid.hpp  GridIO.hpp  OverlapRules.hpp  Tile.hpp  TileSet.hpp  WFCSolver.hpp  Wave.hpp
include/wfc/internal/: SolverCommon.hpp  WFCSolverBase.hpp
include/wfc/solvers/: WFCSolverKokkos.hpp  WFCSolverOMP.hpp  WFCSolverSerial.hpp
rapport/: .gitignore  main.tex  references.bib  slides.tex
rapport/chapters/: annexes.tex  approche_algorithmique_sequentielle.tex  conclusion.tex  extensions_algorithmiques.tex  implementation_cpp_ingenierie_logicielle.tex  introduction.tex  limites_et_perspectives.tex  parallelisation_kokkos_gpu.tex  parallelisation_openmp.tex  preliminaires.tex  probleme_wfc.tex  protocole_experimental_benchmarking.tex  resultats_et_analyse.tex
rapport/schemas/: README.md  kokkos_architecture.md  overlap_compatibility.md  profile_breakdown.md  sample_to_output.md  ue5_pipeline.md  wave_memory_layout.md  wfc_paper_outputs.md
results/: all_combined.csv  amdahl_543692.json  amdahl_all.json  amdahl_combined.json  amdahl_fits.json  benchmark_after_pass1.csv  benchmark_after_pass2.csv  benchmark_after_pass3.csv  benchmark_before.csv  combined_543692_544061.csv  cpl_544061.csv  cpl_544061.out  full_543692.csv  full_543692.out  gpu_bench_544361.csv  insights_543692.md  insights_combined.md  optim_544356.csv  romeo_smoke.csv  romeo_smoke_542693.csv  tables_543692.md  tables_combined.md
results/romeo/: romeo_combined.csv  romeo_followup.csv  romeo_full.csv  romeo_optims.csv
samples/: binary_5x5.txt  binary_checker.txt  binary_dots.txt  binary_stripes.txt  multivalue_maze.txt  multivalue_smooth.txt  multivalue_terrain.txt  plant.txt  rooms.txt  skyline.txt
scripts/: amdahl_fit.py  analyze_results.py  benchmark_insights.py  benchmark_summary.py  build_kokkos.sh  build_kokkos_gpu_romeo.slurm  build_kokkos_romeo.sh  build_romeo.sh  compare_benchmarks.py  compare_optims.py  plot_optim_compare.py  plot_results.py  post_job_pipeline.sh  render_gallery.sh  render_input.py  romeo_complement_bench.slurm  romeo_followup.sh  romeo_full_bench.slurm  romeo_gpu_bench.slurm  romeo_optim_test.slurm  romeo_optims.sh  romeo_parallel_attempts.slurm  romeo_smoke.sh  romeo_smoke.slurm  romeo_submit.sh  run_benchmark.sh
src/: Grid.cpp  GridIO.cpp  OverlapRules.cpp  TileSet.cpp  Wave.cpp
src/internal/: SolverCommon.cpp  WFCSolverBase.cpp
src/solvers/: WFCSolverKokkos.cpp  WFCSolverOMP.cpp  WFCSolverSerial.cpp
tests/: test_backtrack.cpp  test_bitset.cpp  test_edge_cases.cpp  test_grid.cpp  test_grid_io.cpp  test_helpers.hpp  test_kokkos_autoinit.cpp  test_overlap.cpp  test_parallel_attempts.cpp  test_solver.cpp  test_solver_common.cpp  test_solver_kokkos.cpp  test_solver_omp.cpp  test_symmetries.cpp  test_tileset.cpp  test_wave.cpp
ue5_plugin/: README.md
ue5_plugin/WFCDungeon/: WFCDungeon.uplugin
ue5_plugin/WFCDungeon/Source/WFCDungeon/: WFCDungeon.Build.cs
ue5_plugin/WFCDungeon/Source/WFCDungeon/Private/: DungeonGenerator.cpp  TileMappingDataAsset.cpp  WFCDungeonModule.cpp
ue5_plugin/WFCDungeon/Source/WFCDungeon/Public/: DungeonGenerator.h  TileMappingDataAsset.h  WFCDungeonModule.h
